feat(AWSAPPS-2792): added homepage, routing, root layout and styles

--- a/packages/compendium-ui/src/lib/index.css
+++ b/packages/compendium-ui/src/lib/index.css
@@ -1,8 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;500;600;700;800&family=Lato:wght@300;400;700;900&display=swap");
+
+:root {
+  --border-gray: #0000002b;
+  --font-karla: "Karla", sans-serif;
+  --font-lato: "Lato", sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: var(--font-karla), -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
